added happy and better white board messages

--- a/css/style.css
+++ b/css/style.css
@@ -4524,14 +4524,15 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text{
     background:transparent;
-    width: 70px;
+    width: 90px;
     height: 30px;
     align-items:center;
+    justify-content: center;
     /* border:2px solid magenta; */
     font-size:13pt;
     color:black;
     text-align:center;
-    margin-left:11.5px;
+    /* margin-left:11.75px; */
     margin-top:-3%;
     z-index: 3;
     font-weight: bold;
@@ -4570,14 +4571,15 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text2{
     background:transparent;
-    width: 40px;
+    width: 90px;
     height: 30px;
     align-items:center;
+    justify-content: center;
     /* border:2px solid magenta; */
     font-size:14pt;
     color:black;
-    text-align:center;
-    margin-left:25px;
+    /* text-align:center; */
+    margin-left:-2.75%;
     /* margin-top:-1.5%; */
     /* margin-top:-5%; */
     z-index: 3;
@@ -4617,14 +4619,15 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text3{
     background:transparent;
-    width: 40px;
+    width: 90px;
     height: 30px;
     align-items:center;
+    justify-content: center;
     /* border:2px solid magenta; */
     font-size:14pt;
     color:black;
-    text-align:center;
-    margin-left:25px;
+    /* text-align:center; */
+    /* margin-left:-2.75%; */
     margin-top:-4%;
     /* margin-top:-5%; */
     z-index: 3;
@@ -4664,8 +4667,9 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text4{
     background:transparent;
-    width: 60px;
+    width: 90px;
     height: 30px;
+    justify-content: center;
     align-items:center;
     /* border:2px solid magenta; */
     font-size:14pt;
@@ -4674,7 +4678,7 @@ ul.count_down.white li p:nth-child(2) {
     margin-top:-3%;
     z-index: 3;
     font-weight: bold;
-    margin-left:16px;
+    /* margin-left:16%; */
     /* border-radius: 50%; */
 }
 
@@ -4712,6 +4716,7 @@ ul.count_down.white li p:nth-child(2) {
     width: 90px;
     height: 30px;
     align-items:center;
+    justify-content: center;
     /* border:2px solid magenta; */
     font-size:12pt;
     color:black;
@@ -4755,17 +4760,18 @@ ul.count_down.white li p:nth-child(2) {
 }
 #emotion-text6{
     background:transparent;
-    width: 50px;
+    width: 90px;
     height: 30px;
     align-items:center;
+    justify-content: center;
     /* border:2px solid magenta; */
     font-size:12pt;
     color:black;
-    text-align:center;
+    /* text-align:center; */
     margin-top:-3%;
     z-index: 3;
     font-weight: bold;
-    margin-left:18.5px;
+    margin-left:-2.25%;
     /* border-radius: 50%; */
 }
 
@@ -5888,4 +5894,35 @@ input[type=checkbox] {
       height:89px;
       width:89px;
   }
-  
+
+  #happy-display{
+      position:absolute;
+      display:none;
+      top:9.5%;
+      left:75.25%;
+      height:317px;
+      width:317px;
+      /* border:solid 2px limegreen; */
+      z-index:3;
+  }
+  #stay-happy{
+    z-index:3;
+    height:315px;
+    width:315px;
+  }
+
+  #better-display{
+    position:absolute;
+    display:none;
+    top:9.5%;
+    left:75.25%;
+    height:317px;
+    width:317px;
+    /* border:solid 2px limegreen; */
+    z-index:3;
+}
+#get-better{
+  z-index:3;
+  height:315px;
+  width:315px;
+}
